Closed Bug 1867927 Opened 1 year ago Closed 1 year ago

WebSocketImpl::Dispatch may try to dispatch to main thread too late

Categories

(Core :: DOM: Networking, defect)

defect

Tracking

()

RESOLVED FIXED
122 Branch
Tracking Status
firefox122 --- fixed

People

(Reporter: smaug, Assigned: smaug)

Details

Attachments

(1 file)

Pushed by opettay@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/09ec87b3ba48 WebSocketImpl::Dispatch may try to dispatch to main thread too late, r=jesup
Status: NEW → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 122 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: