Bug 1867927 - WebSocketImpl::Dispatch may try to dispatch to main thread too late, r=jesup

Differential Revision: https://phabricator.services.mozilla.com/D195336